--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ rdiscount
 #
 base_url: "http://pmiossec.github.com"	# L'URL de votre site
 url: "http://pmiossec.github.com"	# L'URL de votre site
-title: "Pensées"	# Titre de votre site
+title: "Blog?"	# Titre de votre site
 description: "Quelques infos..."	# La meta description sur la page d'accueil de votre site
 author: "Philippe Miossec"	# Votre nom
 email: "pmiossec+blog@gmail.com"	# Votre email
