--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,14 @@
-# Si vous utilisez un Mac
+_site/*
+_theme_packages/*
+
+Thumbs.db
 .DS_Store
+
+!.gitkeep
+
+.rbenv-version
+.rvmrc
 
 # Pour votre dossier de brouillons
 _drafts
-
-# Pour votre site généré en local
-_site
-
 
